; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freemodbus/modbus/rtu/extr_mbrtu.c_eMBRTUInit.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freemodbus/modbus/rtu/extr_mbrtu.c_eMBRTUInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MB_ENOERR = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8
@MB_EPORTERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @eMBRTUInit(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* @MB_ENOERR, align 4
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %5, align 4
  %13 = call i32 (...) @ENTER_CRITICAL_SECTION()
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i64 @xMBPortSerialInit(i32 %14, i32 %15, i32 8, i32 %16)
  %18 = load i64, i64* @TRUE, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %4
  %21 = load i32, i32* @MB_EPORTERR, align 4
  store i32 %21, i32* %9, align 4
  br label %40

22:                                               ; preds = %4
  %23 = load i32, i32* %7, align 4
  %24 = icmp sgt i32 %23, 19200
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  store i32 35, i32* %10, align 4
  br label %32

26:                                               ; preds = %22
  %27 = load i32, i32* %7, align 4
  %28 = sext i32 %27 to i64
  %29 = mul i64 2, %28
  %30 = udiv i64 1540000, %29
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %10, align 4
  br label %32

32:                                               ; preds = %26, %25
  %33 = load i32, i32* %10, align 4
  %34 = call i64 @xMBPortTimersInit(i32 %33)
  %35 = load i64, i64* @TRUE, align 8
  %36 = icmp ne i64 %34, %35
  br i1 %36, label %37, label %39

37:                                               ; preds = %32
  %38 = load i32, i32* @MB_EPORTERR, align 4
  store i32 %38, i32* %9, align 4
  br label %39

39:                                               ; preds = %37, %32
  br label %40

40:                                               ; preds = %39, %20
  %41 = call i32 (...) @EXIT_CRITICAL_SECTION()
  %42 = load i32, i32* %9, align 4
  ret i32 %42
}

declare dso_local i32 @ENTER_CRITICAL_SECTION(...) #1

declare dso_local i64 @xMBPortSerialInit(i32, i32, i32, i32) #1

declare dso_local i64 @xMBPortTimersInit(i32) #1

declare dso_local i32 @EXIT_CRITICAL_SECTION(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
